@@ -12,8 +12,11 @@ import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.CacheEvict;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,9 +25,9 @@ public class CategoryService {
     final CategoryRepository categoryRepository;
     final CategoryMapper categoryMapper;
 
-    public CategoryResponse createCategory (CategoryCreateRequest request)
-    {
-        if (categoryRepository.existsByName(request.getName())){
+    @CacheEvict(value = "categories", allEntries = true)
+    public CategoryResponse createCategory(CategoryCreateRequest request) {
+        if (categoryRepository.existsByName(request.getName())) {
             throw new AppException(ErroCode.NAME_CATEGORY_INVALID);
         }
         Category category = categoryMapper.toCategoryMapper(request);
@@ -32,25 +35,26 @@ public class CategoryService {
         return categoryMapper.toCategoryResponse(categoryRepository.save(category));
     }
 
-    public List<CategoryResponse> getAllCategories(){
+    @Cacheable(value = "categories", key = "'all'")
+    public List<CategoryResponse> getAllCategories() {
         return categoryRepository.findAll().stream()
-                .map(categoryMapper::toCategoryResponse).toList();
+                .map(categoryMapper::toCategoryResponse).collect(Collectors.toList());
     }
 
-    public CategoryResponse getCategoryById(Long categoryId){
+    public CategoryResponse getCategoryById(Long categoryId) {
         return categoryMapper.toCategoryResponse(categoryRepository.findById(categoryId)
-                .orElseThrow(()-> new AppException(ErroCode.CATEGORY_NO_EXISTED)));
+                .orElseThrow(() -> new AppException(ErroCode.CATEGORY_NO_EXISTED)));
 
     }
 
-    public CategoryResponse updateCategory(Long categoryId,CategoryUpdateRequest request){
+    public CategoryResponse updateCategory(Long categoryId, CategoryUpdateRequest request) {
         Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(()-> new AppException(ErroCode.CATEGORY_NO_EXISTED));
+                .orElseThrow(() -> new AppException(ErroCode.CATEGORY_NO_EXISTED));
         categoryMapper.updateCategory(category, request);
         return categoryMapper.toCategoryResponse(categoryRepository.save(category));
     }
 
-    public void deleteCategory(Long categoryId){
+    public void deleteCategory(Long categoryId) {
         categoryRepository.deleteById(categoryId);
     }
 }
